# ogui

./: CMakeLists.txt  README.md
include/ogui/: Control.h  IContext.h  IPanel.h  IRenderer.h  Panel.h  Widget.h  Window.h  ogui.h  types.h
src/: Context.cpp  Context.h  Panel.cpp  Panel.h  PanelsManager.cpp  PanelsManager.h  Window.cpp  ogui.cpp
